--- a/openshift/nlb/nlb-private-zone-2.yaml
+++ b/openshift/nlb/nlb-private-zone-2.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: private-nlb-eu-de-2
-  namespace: test-nlb
+  namespace: nlb-private
   annotations:
     service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "my-private-nlb-2"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
@@ -15,13 +15,15 @@ metadata:
     #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "eu-de-1"
     #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-health-check-udp: "<tcp_port"
   labels:
-    app: test
+    app: nlb-pod
 spec:
   type: LoadBalancer
+  # Specify Cluster (Default) or Local (to preserve the source IP address of client requests).
+  externalTrafficPolicy: Local
   selector:
     app: test
     # Target only pods located in zone eu-de-2
-    ibm-cloud.kubernetes.io/zone: eu-de-2
+    # ibm-cloud.kubernetes.io/zone: eu-de-2
   ports:
   - name: 8080-tcp
     port: 8080
