--- a/openshift/nlb/nlb-private-zone-3.yaml
+++ b/openshift/nlb/nlb-private-zone-3.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: private-nlb-eu-de-3
-  namespace: test-nlb
+  namespace: nlb-private
   annotations:
     service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "my-private-nlb-3"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
@@ -16,9 +16,11 @@ metadata:
     #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "eu-de-1"
     #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-health-check-udp: "<tcp_port"
   labels:
-    app: test
+    app: nlb-pod
 spec:
   type: LoadBalancer
+  # Specify Cluster (Default) or Local (to preserve the source IP address of client requests).
+  externalTrafficPolicy: Local
   selector:
     app: test
     # Target only pods located in zone eu-de-3
